# citrate

./: .gitignore  .gitmodules  BUILD_REFERENCE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_AND_ROADMAP.md  CONTRIBUTING.md  DEPLOY_TO_RENDER.md  DEVNET_QUICKSTART.md  DOCUMENTATION.md  DOCUMENTATION_MATRIX.md  Dockerfile  FRESH_DEPLOYMENT_GUIDE.md  GUI_MINING_IMPLEMENTATION.md  IMPLEMENTATION_STRATEGY.md  INTEGRATION_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_PROGRESS.md  README.md  SPRINT_1_GHOSTDAG_SUMMARY.md  SPRINT_2_SUMMARY.md  TESTNET_DEPLOYMENT_GUIDE.md  TEST_SUITE_COMPLETION_REPORT.md  cleanup_artifacts.sh  package-lock.json  render.yaml
citrate/cli/: Cargo.toml
citrate/cli/src/: config.rs  main.rs
citrate/core/consensus/: Cargo.toml
citrate/core/economics/: Cargo.toml
citrate/core/execution/: Cargo.toml  build.rs
citrate/core/marketplace/: Cargo.toml
citrate/core/mcp/: Cargo.toml
citrate/core/network/: Cargo.toml
citrate/core/sequencer/: Cargo.toml
citrate/core/storage/: Cargo.toml
citrate/node/: Cargo.toml  test_transaction.sh
citrate/node-app/: Cargo.toml
citrate/node-app/src/: main.rs
citrate/node/config/: devnet.toml  mainnet.toml  testnet-1.toml  testnet-2.toml  testnet.toml
citrate/node/src/: adapters.rs  artifact.rs  config.rs  genesis.rs  inference.rs  logging.rs  main.rs  metrics.rs  model_manager.rs  model_verifier.rs  producer.rs
citrate/node/tests/: test_genesis.rs
citrate/wallet/: Cargo.toml
citrate/wallet/examples/: test_tx.rs
citrate/wallet/src/: keystore.rs  main.rs  rpc_client.rs  transaction.rs  wallet.rs
citrate/wallet/tests/: integration_tests.rs
lattice-v3/: .env.local  .validator-key  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_GUIDE.md  Dockerfile  GENESIS_STARTUP_GUIDE.md  GLOBAL_ROADMAP.md  GUI_TESTNET_CONNECTION.md  INSTALLATION_GUIDE.md  MASTER_SPRINT_PLAN.md  PHASE1_VERIFICATION.md  PHASE2_AI_INFRASTRUCTURE_PLAN.md  PHASE3_COMPLETION.md  PHASE3_PROGRESS.md  PHASE4_ROADMAP.md  README.md  ROADMAP_STATUS.md  SECURITY_AUDIT.md  SPRINT_6_PLAN.md  SPRINT_8_MCP_PLAN.md  TEST_AUDIT_REPORT.md  TRANSACTION_TESTING_GUIDE.md  WALLET_AND_REWARDS_GUIDE.md  devnet-config.toml  docker-compose.yml  foundry.toml  package-lock.json  security_tests.rs  simple_tx_test.sh  start_chain.sh  start_testnet.sh  testnet-config.toml
lattice-v3/.github/workflows/: build-binaries.yml  ci.yml  comprehensive-ci.yml  deploy-web.yml  publish-sdks.yml  release.yml
lattice-v3/.lattice/: IDENTITY  LOG
lattice-v3/.lattice-devnet/: 000008.sst  000009.sst  000010.sst  000011.sst  000012.sst  000016.sst  000017.sst  000018.sst  000019.sst  000020.sst  000021.sst  000022.sst  000024.sst  000025.sst  000026.sst  000027.sst  000028.sst  000029.sst  000030.sst  000031.sst  000032.sst  000033.sst  000034.sst  IDENTITY  LOG  LOG.old.1757194961354260  LOG.old.1757195090478434  LOG.old.1757196889238521  LOG.old.1757283671491521  LOG.old.1758060957793369  LOG.old.1758061609554384  LOG.old.1758061630097363  LOG.old.1758221935261510  MANIFEST-000014  MANIFEST-000024  MANIFEST-000029  MANIFEST-000036  OPTIONS-000038
lattice-v3/.lattice-mn-1/: IDENTITY  LOG  MANIFEST-000005
lattice-v3/.lattice-mn-2/: IDENTITY  LOG  MANIFEST-000005
lattice-v3/.lattice-testnet/: IDENTITY  LOG
lattice-v3/assets/: genesis_model_generator.py
lattice-v3/cli/: Cargo.toml
lattice-v3/cli/src/: config.rs  main.rs
lattice-v3/cluster/: node1.toml  node4.toml
lattice-v3/contracts/: .env  foundry.toml
lattice-v3/contracts/cache/: solidity-files-cache.json
lattice-v3/contracts/script/: Deploy.s.sol  Interact.s.sol
lattice-v3/contracts/src/: IPFSIncentives.sol  InferenceRouter.sol  LoRAFactory.sol  ModelAccessControl.sol  ModelMarketplace.sol  ModelRegistry.sol
lattice-v3/contracts/test/: IPFSIncentives.t.sol  InferenceRouter.t.sol  ModelMarketplace.t.sol  ModelRegistry.t.sol  SimpleStorage.sol
lattice-v3/core/api/: Cargo.toml
lattice-v3/core/consensus/: Cargo.toml
lattice-v3/data/: IDENTITY  LOG  LOG.old.1757204337243023  LOG.old.1757204372149745  LOG.old.1757204393457438  LOG.old.1757204468942407  LOG.old.1757205070171137  LOG.old.1757205585279546  LOG.old.1757205615337287  LOG.old.1757205779947169  LOG.old.1757205798057533  LOG.old.1757206269042553  MANIFEST-000045
lattice-v3/developer-tools/: README.md
lattice-v3/docker/: api.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  ipfs.Dockerfile  node.Dockerfile
lattice-v3/explorer/: .env.example  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
lattice-v3/faucet/: Cargo.toml
lattice-v3/gui/: LATTICE_GUI_INTEGRATION_PLAN.md
lattice-v3/homebrew/: lattice.rb
lattice-v3/monitoring/: docker-compose.yml  prometheus.yml
lattice-v3/node/: Cargo.toml  test_transaction.sh
lattice-v3/node-app/: Cargo.toml
lattice-v3/script/: Deploy.s.sol
lattice-v3/scripts/: bootstrap-node.sh  chaos_testing.sh  clean_start.sh  connect_gui_to_testnet.sh  deploy-all.sh  deploy-dev.sh  deploy-frontends.sh  deploy.sh  devnet_start.sh  fix_and_restart.sh  genesis_startup.sh  gui_testnet_connect.sh  hard_reset_chain.sh  install-sdks.sh  launch_10node_testnet.sh  launch_multi_devnet.sh  launch_simple_testnet.sh  launch_testnet.sh  load_test.sh  monitor_testnet.sh  monitor_wallets.sh  publish-sdks.sh  quick_genesis.sh  reset-dev.sh  run_e2e_tests.sh  scaffold-local-peers.sh  security_audit.sh  setup_wallet_rewards.sh  start_devnet.sh  start_fresh_testnet.sh  start_multinode.sh  start_testnet.sh  stop-dev.sh  stop_nodes.sh  test_ai_simple.js  test_day_6.sh  test_days_1_4.sh  test_days_1_5_complete.sh  test_devnet.sh  test_transaction_complete.sh  (+4 more)
lattice-v3/tests/: comprehensive_integration_tests.rs  consensus_storage_integration.rs  integration_test.rs  simple_integration.rs  test_ai_pipeline.sh  test_inference_e2e.sh  verify_metal_gpu.py
lattice-v3/tools/: README.md  convert_to_coreml.py  import_model.py  requirements.txt
lattice-v3/wallet/: Cargo.toml
(+1232 files in other folders)
