[workspace]
members = [
    "cli",
    "core/consensus",
    "core/sequencer",
    "core/execution",
    "core/storage",
    "core/primitives",
    "core/api",
    "core/network",
    "core/mcp",
    "core/economics",
    "core/marketplace",
    "node",
    "node-app",
    "wallet",
    "faucet",
    "gui/lattice-core/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lattice Network"]
license = "MIT"
repository = "https://github.com/lattice-network/lattice-v3"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = "2.0"
rand = "0.8"

# Networking
libp2p = "0.54"
quinn = "0.11"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Time
chrono = "0.4"

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
