[package]
name = "citrate-cli"
version = "0.1.0"
edition = "2021"
authors = ["Citrate Team"]
license = "MIT"

[[bin]]
name = "citrate-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
rpassword = "7.2"
chrono = "0.4"
dialoguer = "0.11"
aes-gcm = "0.10"

# Local dependencies (temporarily commented for CLI development)
# citrate-consensus = { path = "../core/consensus" }
# citrate-execution = { path = "../core/execution" }
# citrate-api = { path = "../core/api" }

# Crypto - use ed25519 for consistency with wallet
ed25519-dalek = "2.0"
rand = "0.8"
sha3 = "0.10"
# secp256k1 removed - using ed25519 for signature alignment with wallet

[dev-dependencies]
tempfile = "3.8"