[package]
name = "citrate-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "citrate"
path = "src/main.rs"

[dependencies]
# Local dependencies
citrate-consensus = { path = "../core/consensus" }
citrate-storage = { path = "../core/storage" }
citrate-execution = { path = "../core/execution" }
citrate-network = { path = "../core/network" }
citrate-sequencer = { path = "../core/sequencer" }
citrate-api = { path = "../core/api" }
citrate-economics = { path = "../core/economics" }
citrate-mcp = { path = "../core/mcp" }

# External dependencies
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
chrono = "0.4"
sha2 = "0.10"
sha3 = "0.10"
primitive-types = "0.12"
async-trait = "0.1"
# Enable TLS, multipart uploads (IPFS add), and JSON helpers used in node code
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "multipart", "json"] }
rand = { workspace = true }

[features]
default = []
devnet = []
# Feature flag for embedding BGE-M3 model at compile time
# Only needed when creating a new genesis block
# Contributors can build without this feature
embed-genesis-model = []
