[package]
name = "citrate-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wallet"
path = "src/main.rs"

[dependencies]
# Local dependencies
citrate-consensus = { path = "../core/consensus" }
citrate-execution = { path = "../core/execution" }

# Crypto
ed25519-dalek = "2.0"
rand = "0.8"
sha3 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
scrypt = { version = "0.11", default-features = false }

# Storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Utils
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
dirs = "5.0"
chrono = "0.4"
primitive-types = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"