[package]
name = "lattice-cli"
version = "0.1.0"
edition = "2021"
authors = ["Lattice Team"]
license = "MIT"

[[bin]]
name = "lattice-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
rpassword = "7.2"
chrono = "0.4"

# Local dependencies
lattice-consensus = { path = "../core/consensus" }
lattice-execution = { path = "../core/execution" }
lattice-api = { path = "../core/api" }

# Crypto
secp256k1 = "0.27"
rand = "0.8"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3.8"