[package]
name = "lattice-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ed25519-dalek = "2.1"
hex = "0.4"
bincode = "1.3"
sha3 = "0.10"
primitive-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }

# Local dependencies
lattice-consensus = { path = "../core/consensus" }
lattice-execution = { path = "../core/execution" }