[package]
name = "lattice-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
# Local dependencies
lattice-consensus = { path = "../core/consensus" }
lattice-storage = { path = "../core/storage" }
lattice-execution = { path = "../core/execution" }
lattice-network = { path = "../core/network" }
lattice-sequencer = { path = "../core/sequencer" }
lattice-api = { path = "../core/api" }
lattice-economics = { path = "../core/economics" }
lattice-mcp = { path = "../core/mcp" }

# External dependencies
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
chrono = "0.4"
sha3 = "0.10"
primitive-types = "0.12"
async-trait = "0.1"
# Enable TLS, multipart uploads (IPFS add), and JSON helpers used in node code
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "multipart", "json"] }

[features]
devnet = []
