[package]
name = "citrate-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Local dependencies
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio-test = "0.4"
