[package]
name = "citrate-economics"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

citrate-execution = { path = "../execution" }
citrate-consensus = { path = "../consensus" }
citrate-storage = { path = "../storage" }