[package]
name = "citrate-sequencer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Local dependencies
citrate-consensus = { path = "../consensus" }
citrate-execution = { path = "../execution" }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
priority-queue = "2.0"
futures = "0.3"
rlp = "0.5"
secp256k1 = { version = "0.27", features = ["recovery"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["devnet"]
devnet = []
