[package]
name = "citrate-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rocksdb = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
bytes = "1.5"
blake3 = "1.5"

# Local dependencies
citrate-consensus = { path = "../consensus" }
citrate-execution = { path = "../execution" }

# Storage specific
lru = "0.12"
parking_lot = "0.12"
dashmap = "5.5"
hex = "0.4"
num_cpus = "1.16"
primitive-types = "0.12"
ethereum-types = "0.14"
chrono = "0.4"
aes-gcm = "0.10"
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
rand = { workspace = true }

[features]
no-compression = []
