[package]
name = "lattice-execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rocksdb = { workspace = true }

# Local dependencies
lattice-consensus = { path = "../consensus" }
lattice-sequencer = { path = "../sequencer" }

# Execution specific
primitive-types = { version = "0.12", features = ["serde"] }
ethereum-types = "0.14"
rlp = "0.5"
hex = "0.4"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
rand = { workspace = true }