[package]
name = "lattice-execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
sha3 = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Additional
futures = "0.3"
lattice-consensus = { path = "../consensus" }

# Execution specific
primitive-types = { version = "0.12", features = ["serde"] }
ethereum-types = "0.14"
rlp = "0.5"
hex = "0.4"
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.12"
prometheus = "0.13"
once_cell = "1.19"

# Tensor operations
ndarray = "0.15"
ndarray-rand = "0.14"

# Zero-knowledge proofs
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-bls12-381 = "0.4"
ark-snark = "0.4"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
rand = { workspace = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "parallel_bench"
harness = false

[features]
metrics = []
ai_zkp = []
coreml = []  # Enable CoreML support on macOS
