[package]
name = "citrate-core"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "citrate_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2.1"

# Citrate node integration - properly linked to the actual implementations
citrate-consensus = { path = "../../../core/consensus" }
citrate-execution = { path = "../../../core/execution" }
citrate-storage = { path = "../../../core/storage" }
citrate-network = { path = "../../../core/network" }
citrate-api = { path = "../../../core/api" }
citrate-sequencer = { path = "../../../core/sequencer" }
citrate-mcp = { path = "../../../core/mcp" }
citrate-economics = { path = "../../../core/economics" }
citrate-wallet = { path = "../../../wallet" }
primitives = { path = "../../../core/primitives" }

# Security & Crypto
ed25519-dalek = "2.1"
keyring = "2.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# Database
rocksdb = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }

# Networking
# reqwest already declared above with json feature
tungstenite = "0.21"
jsonrpc-core = "18.0"

# Utilities
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
dirs = "5.0"
sha3 = "0.10"
bip39 = "1.2"
primitive-types = "0.12"

# Terminal PTY support
portable-pty = "0.8"

# Agent module dependencies
regex = "1.10"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.16"

# IPFS support
shellexpand = "3.1"
futures = "0.3"

# Local LLM support using llama-cpp-2 bindings
# llama-cpp-2 is a modern Rust wrapper around llama.cpp with Qwen2 support
llama-cpp-2 = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
# Enable local-llm by default for bundled model inference
default = ["local-llm"]
local-llm = ["llama-cpp-2"]  # Enable local GGUF model inference via llama.cpp
# Development mode - enables mock data and verbose logging
# Use: cargo build --features dev-mode
dev-mode = []
